--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ushakov-igor/chonk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Ultra-lightweight chunker for everything — arrays, strings, sets, maps, async iterables and more.",
   "main": "index.js",
   "type": "module",
@@ -8,6 +8,12 @@
     "import": "./index.js"
   },
   "types": "index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts",
+    "LICENSE",
+    "src/"
+  ],
   "keywords": [
     "chunk",
     "utility",
