--- a/package.json
+++ b/package.json
@@ -37,6 +37,13 @@
   },
   "homepage": "https://github.com/ushakov-igor/chonkify#readme",
   "scripts": {
-    "test": "node test/basic.test.js"
+    "test": "node test/basic.test.js",
+    "minify": "terser src/index.js -o index.js --module --ecma 2020 --compress passes=2,toplevel,unsafe_arrows,arrows --format comments=false",
+    "prepublishOnly": "npm run minify",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "husky": "9.1.7",
+    "terser": "5.28.1"
   }
 }
